--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "intellichat-ai",
+  "name": "newreactfile2024",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "lint": "eslint .",
-    "deploy": "vite build && gh-pages -d dist",
-    "serve-backend": "cd ../server && python backend.py"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
+    "@react-three/drei": "^9.121.5",
+    "@react-three/fiber": "^8.17.14",
+    "@react-three/postprocessing": "^2.19.1",
+    "emoji-picker-react": "^4.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.1",
-    "@react-three/fiber": "^8.17.14",
-    "@react-three/drei": "^9.121.5",
     "three": "^0.173.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
@@ -30,7 +31,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "vite": "^5.4.10",
-    "gh-pages": "^6.1.1"
+    "globals": "^15.11.0",
+    "vite": "^5.4.10"
   }
 }
